# counterspell

./: .gitignore  .landmark.yml  .releaserc.json  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md
.evidence/: counterspell-watch-status-2026-07-02.md
.evidence/plan/: counterspell-watch-status.html
.github/workflows/: ci.yml  landmark-release.yml  release.yml
backlog.d/: 001-adopt-lucide-scroll-text-as-the-counterspell-wordmark-icon.md
desktop/: Cargo.toml  README.md  tauri.conf.json
desktop/frontend/: app.css  app.js  index.html  mock-ipc.js  tokens.css  tokens.json
desktop/icons/: icon.icns
desktop/src/: main.rs
desktop/tests/: control.rs  rebind.rs
docs/releases/: README.md
extras/swiftbar/: counterspell.5m.sh
scripts/: live-probe.sh  sync-release-accordion.py
site/: DESIGN.md  changelog.html  copy.js  features.html  get-started.html  index.html  marketing.css  railspy.js  release-notes.html
src/: api.rs  cli.rs  config.rs  dashboard.rs  dashboard_render.rs  defaults.rs  events.rs  feed.rs  herdr.rs  indicators.rs  lib.rs  main.rs  master.rs  model.rs  output.rs  rebind.rs  remediation.rs  sessions.rs  status.rs  store.rs  tests.rs  util.rs
tests/: cli.rs
