[workspace]
members = ["desktop"]
resolver = "2"

[package]
name = "counterspell"
version = "0.1.0"
edition = "2021"
description = "Watch Fable Claude sessions and map them to Herdr panes."
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
