[package]
name = "counterspell-desktop"
version = "0.1.0"
edition = "2021"
description = "Persistent desktop control window for Counterspell."
license = "MIT"

[[bin]]
name = "counterspell-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
counterspell = { path = ".." }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.13"
